<resources>

    <string name="app_name">BY-PASS</string>

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_guide">Show Intro</string>

    <string name="textFieldHeaderNumber">Calling card setup</string>
    <string name="connectionNumber">Connection Number</string>
    <string name="edit_num_hint">Option/Passcode</string>
    <string name="edit_delay_hint">Wait(Sec)</string>
    <string name="button_desc_add_row">Add Row Button</string>
    <string name="desc_delete_row">Delete Row</string>

    <string name="textFilterHeaderCountryCode">Country Codes</string>
    <string name="editTextHintCountryCode">Country Code</string>
    <string name="editTextHintDialAs">Dial as</string>

    <string name="permissionRequestMessageReadContacts"> shows Contacts info of the destination number in routing message from phone Contacts.</string>
    <string name="permissionRequestMessageCallPhone"> requires this permission to place a call via configured routing number.</string>
    <string name="permissionRequestReadContactsIfDenied">If denied, routing notification will not show contact info.</string>
    <string name="permissionRequestCallPhoneIfDenied">If denied, app will not work as intended.\n\nExit app?</string>

    <string name="title_activity_guide">GuideActivity</string>
    <string name="guide_button_skip">SKIP</string>
    <string name="guide_button_next">&gt;</string>
    <string name="guide_button_prev">&lt;</string>
    <string name="guide_button_done">DONE</string>

</resources>