<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filterSet"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10">

    <EditText android:id="@+id/editTextCountryCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:hint="@string/editTextHintCountryCode"
        android:inputType="phone" >
    </EditText>

    <EditText android:id="@+id/editTextDialAs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/editTextHintDialAs"
        android:inputType="number" >
    </EditText>

    <ImageButton android:id="@+id/buttonDeleteCountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_delete_row"
        android:background="@android:drawable/ic_delete"/>
</LinearLayout>