<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fieldSet"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10">

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/editTextNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:hint="@string/edit_num_hint"
        android:inputType="phone" >
    </EditText>

    <EditText xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/editTextDelay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:hint="@string/edit_delay_hint"
        android:inputType="number"
        android:maxLength="2" >
    </EditText>

    <ImageButton
        android:id="@+id/buttonDeleteRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_delete_row"
        android:background="@android:drawable/ic_delete"/>
</LinearLayout>