<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baseFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guide_page_1"
    android:fitsSystemWindows="true"
    tools:context="com.ponmaran.JumpCall.GuideActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <Button android:id="@+id/button_skip"
            android:layout_marginEnd="10dp"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="#FAAC58"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAppearance="@android:style/Widget.Button"
            android:layout_gravity="bottom"
            android:text="@string/guide_button_skip" />
        <Button android:id="@+id/button_prev"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="#FAAC58"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAppearance="@android:style/Widget.Button"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/guide_button_prev" />
        <Button android:id="@+id/button_next"
            android:layout_marginStart="10dp"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:background="#FAAC58"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textAppearance="@android:style/Widget.Button"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/guide_button_next" />
    </LinearLayout>
</FrameLayout>
